--- a/_config.yml
+++ b/_config.yml
@@ -18,15 +18,15 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: aadilislam460@gmail.com
+  facebook: Aadil Islam
   flickr:
   github: barryclark/jekyll-now
-  instagram:
-  linkedin:
+  instagram: __aadilIslam__
+  linkedin: MohdAadil13
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: AadilIslam14
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
