--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,8 @@ name: Mohd Aadil
 description: Linux Admin
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://www.google.com/imgres?q=red%20hat%20linux%20admin%20pic%20in%20.png&imgurl=https%3A%2F%2Fe7.pngegg.com%2Fpngimages%2F37%2F1022%2Fpng-clipart-red-hat-enterprise-linux-red-hat-linux-fedora-linux-hat-text.png&imgrefurl=https%3A%2F%2Fwww.pngegg.com%2Fen%2Fsearch%3Fq%3Dred%2BHat%2BLinux&docid=jNH7uvWF6XBqnM&tbnid=4R0q4bmaPgZNYM&vet=12ahUKEwj8mN2qg8GGAxVGS2wGHYWLCd0QM3oECA4QAA..i&w=900&h=480&hcb=2&ved=2ahUKEwj8mN2qg8GGAxVGS2wGHYWLCd0QM3oECA4QAA
-
-#
-# Flags below are optional
-#
-
-# Includes an icon in the footer for each username you enter
+avatar: https://banner2.cleanpng.com/20180626/lgv/kisspng-red-hat-enterprise-linux-7-red-hat-certification-p-5b3239fd77fb31.2533779415300183014915.jpg
+# Includes an icon in the footer for each username you ente
 footer-links:
   dribbble:
   email: aadilislam460@gmail.com
