--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ footer-links:
   email: aadilislam460@gmail.com
   facebook: Aadil Islam
   flickr:
-  github: barryclark/jekyll-now
-  instagram: __aadilIslam__
+  github: mohdaadil74097.github.io
+  instagram: __aadilislam__
   linkedin: MohdAadil13
   pinterest:
   rss: # just type anything here for a working RSS icon
