--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Mohd Aadil
 description: Linux Admin
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://banner2.cleanpng.com/20180626/lgv/kisspng-red-hat-enterprise-linux-7-red-hat-certification-p-5b3239fd77fb31.2533779415300183014915.jpg
+avatar: https://www.git-scm.com/images/logos/downloads/Git-Icon-Black.png
 # Includes an icon in the footer for each username you ente
 footer-links:
   dribbble:
